crates/mir/tests/fixtures/errors/return_borrow_call_overlap.fe
struct Pair {
    a: u256,
    b: u256,
}

fn borrow_a(x: mut Pair) -> mut u256 {
    mut x.a
}

pub fn return_borrow_call_overlap() {
    let mut s = Pair { a: 0, b: 0 }
    let p: mut u256 = borrow_a(mut s)
    let q: mut u256 = mut s.a
    p = 1
    q = 2
}
